# docs/swagger.yaml
@@ -21,7 +21,7 @@ definitions:
     type: object
   models.ChartVersion:
     properties:
-      appVersion:
+      app_version:
         type: string
       description:
         type: string
@@ -82,26 +82,31 @@ definitions:
         type: string
       bind_addr:
         type: string
+      chart_count:
+        type: integer
+      image_count:
+        type: integer
       node_name:
         type: string
+      pull_count:
+        type: integer
       role:
         type: string
       status:
         type: string
     type: object
-host: seeder.cloudminds.com
+host: seeder.pornhub.com
 info:
   contact:
-    email: support@swagger.io
-    name: API Support
-    url: http://www.swagger.io/support
+    email: 61755280@qq.com
+    name: Haozhi.Cui
+    url: http://github.com/sak0
   description: Server for image/chart repo consistent.
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
-  termsOfService: http://swagger.io/terms/
-  title: Swagger Example API
-  version: "1.0"
+  title: Seeder API
+  version: "0.1"
 paths:
   /api/v1/chart:
     get:
